--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,9 @@ body {
   font-size: 1.28vw;
   color: black;
   background: white;
-  text-align: left;
   max-width: 1250px;
-  width: 100%
+  width: 100%;
+  overflow-x: hidden;
 }
 
 @font-face {
@@ -36,7 +36,7 @@ footer {
 
 .full-width{
   width: 100%;
-  margin:0 auto;
+  margin: 0 auto;
 
 }
 
@@ -46,16 +46,14 @@ footer {
 }
 
 .third-width-1, .third-width-2, .third-width-3  {
-  width: 33.2%;
+  width: 33.3%;
   float: left;
-  border-top: 1px solid #dedbdc;
-  border-bottom: 1px solid #dedbdc;
+  background-color: #f2f2f2;
+
+
 }
 
-.third-width-2 {
-  border-left: 1px solid #dedbdc;
-  border-right: 1px solid #dedbdc;
-}
+
 
 
 /************ HEADER ******************/
@@ -75,7 +73,6 @@ span.h2-alt-color {
 header nav {
   float: right;
   margin-top: 12px;
-  margin-right: 5%;
 }
 
 header nav ul {
@@ -101,6 +98,8 @@ header img {
   border-bottom: 3px solid #77a466;
   clear: both;
   margin: 0 2%;
+  width: 100%;
+  height: auto;
 }
 
 /*************** ABOUT ******************/
@@ -134,6 +133,7 @@ h4 {
   line-height: 1.44vw;
   margin: 5%;
   text-align: center;
+  width: 100%;
 
 }
 
@@ -144,11 +144,12 @@ h4 {
   line-height: 2vw;
   margin: 5%;
   text-align: center;
+  width: 100%;
 }
 
 #reviews h4 {
   margin: 5%;
-  text-align: center;
+
 
 }
 
